# curoboV2_demo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROKAE_migration_notes.md  requirements.txt
XMS5-R800-W4G3B4C_description/XMS5-R800-W4G3B4C_description/: CMakeLists.txt  package.xml
XMS5-R800-W4G3B4C_description/XMS5-R800-W4G3B4C_description/launch/: XMS5-R800-W4G3B4C.rviz  direct_teach.launch
XMS5-R800-W4G3B4C_description/XMS5-R800-W4G3B4C_description/urdf/: XMS5-R800-W4G3B4C.urdf
demo_scripts/: dahuafuhe_asset_utils.py  demo_plan_pose.py  demo_plan_pose_dahuafuhe.py  demo_plan_pose_rokae.py  inspect_official_pose_baseline.py  materialize_dahuafuhe_assets.py  materialize_rokae_assets.py  review_dahuafuhe_pose_demo.py  review_rokae_pose_demo.py  rokae_asset_utils.py  verify_dahuafuhe_assets.py  verify_rokae_assets.py
doc/: bubblify_workflow.md
doc/plan/: rokae_curobo_planning_upgrade_plan.json  rokae_curobo_planning_upgrade_plan.md
playback/: export_dahuafuhe_playback_contract.py  export_mujoco_playback_contract.py  export_rokae_playback_contract.py  render_degeneracy_gifs.py  replay_dahuafuhe_mujoco.py  replay_official_franka_mujoco.py  replay_rokae_mujoco.py  review_dahuafuhe_mujoco_playback.py  review_rokae_mujoco_playback.py  run_dahuafuhe_demo.py  run_official_franka_demo.py  run_rokae_demo.py
scripts/: config_utils.py  convert_bubblify_spheres.py  generate_rokae_spheres.py  plan_rokae_motion.py  rokae_asset_utils.py  rokae_motion_gen.py  run_rokae_pipeline.py  stress_test_rokae_pipeline.py
tests/: smoke_test_spheres.py  validate_spheres_geometry.py
(+468 files in other folders)
