<?xml version="1.0"?>
<package>
  <name>XMS5-R800-W4G3B4C_description</name>
  <version>0.0.1</version>
  <description>The XMS5-R800-W4G3B4C_description package</description>

  <maintainer email="zhangbiao@rokae.com">Biao Zhang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>

